# PPPA

./: CMakeLists.txt  README.md  pyproject.toml
docs/: architecture.md  usage_instructions.txt
docs/translated_code/: Approximate.cpp  Utils.h  hv.cpp  mexPPPA_linux.cpp  repo_indexer.py  testCpp.m
docs/whl/wheelhouse/: OFFLINE_WHEELHOUSE_INSTALL.txt
docs/whl/wheelhouse/cp310/: black-26.3.1-cp310-cp310-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl  build-1.4.3-py3-none-any.whl  cma-4.4.4-py3-none-any.whl  fast_hv-0.1.0-cp310-cp310-linux_x86_64.whl  gdwh-1.0.0-py3-none-any.whl  gfs_physics-1.0.0-cp310-cp310-linux_x86_64.whl  graphemeu-0.7.2-py3-none-any.whl  gwdh_classifier-0.1.0-py3-none-any.whl  gwdh_core-0.1.0-py3-none-any.whl  gwdh_datalake-0.1.0-py3-none-any.whl  gwdh_optim-0.1.0-py3-none-any.whl  (+8 more)
docs/whl/wheelhouse/cp310-manylinux2014/: OFFLINE_WHEELHOUSE_INSTALL.txt  about_time-4.2.1-py3-none-any.whl  alive_progress-3.3.0-py3-none-any.whl  coverage-7.13.5-cp310-cp310-manylinux1_x86_64.manylinux_2_28_x86_64.manylinux_2_5_x86_64.whl  fast_hv-0.1.0-cp310-cp310-linux_x86_64.whl  gdwh_workspace-0.1.0-py3-none-any.whl  gfs_physics-1.0.0-cp310-cp310-linux_x86_64.whl  gwdh_hpc-0.1.0-py3-none-any.whl  gwdh_training-0.1.0-py3-none-any.whl  megadeth-1.0.0-cp310-cp310-linux_x86_64.whl  numba-0.65.0-cp310-cp310-manylinux2014_x86_64.manylinux_2_17_x86_64.whl
src/fast_hv/: __init__.py  bindings.cpp  pppa.cpp  pppa.hpp
tests/: generate_report.py  matlab_reference.m  quick_test.py  verification_report.txt  verify_pppa.py
